--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  df_di: ^0.14.2
-  df_pod: ^0.18.5
-  df_safer_dart: ^0.15.9
-  df_log: ^0.3.18
-  df_type: ^0.12.7
+  df_di: ^0.15.1
+  df_pod: ^0.18.8
+  df_safer_dart: ^0.16.2
+  df_log: ^0.3.19
+  df_type: ^0.14.2
 
 ## -----------------------------------------------------------------------------
 
 dev_dependencies:
   flutter_lints: ^6.0.0
+  custom_lint: ^0.7.5
+  df_safer_dart_lints: ^0.3.2
